--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="images/google_shortcut_icon.ico" rel="shortcut icon">
     <title>Google Home Page</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_533302_ruyuoj51mt.css">
+	<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_533302_ruyuoj51mt.css">
     
 </head>
 <body>
